# hoechstgan

./: .gitignore  Dockerfile  README.md  compile_file_list.py  compute_dataset_stats.py  compute_dataset_visualisations.py  dataset_stats.py  docker-compose.yml  index_dataset.py  install.sh  multi.py  print_config.py  print_net.py  pyproject.toml  run_experiments.sh  test  test.ipynb  test.py  test_config.py  test_latent.ipynb  test_transform.ipynb  tests.sh  tile_export.groovy  to_test.txt  train.py  train_federated.py  wandb_test.py
conf/: config.yaml  test.yaml  test_overrides.yaml  train.yaml
conf/dataset/: cd3.yaml  cd8.yaml  cy3.yaml  cy5.yaml  default.yaml  h3342.yaml  hoechst.yaml
conf/experiment/: cd3-dist-transform.yaml  cd3-gaussian.yaml  cd3.yaml  compute_stats.yaml  cy3.yaml  cy5.yaml  hoechstgan.yaml  hoechstgan_basic.yaml  hoechstgan_composite.yaml  hoechstgan_sigmoid.yaml
federation/: federate.py
hoechstgan/: __init__.py
hoechstgan/data/: __init__.py  dataset.py  split_dataset.py
hoechstgan/data/transforms/: __init__.py  distance_transform.py  gaussian_blur.py  transforms.py
hoechstgan/models/: __init__.py  base_model.py  hoechstgan.py  networks.py  pix2pix.py  regression.py
hoechstgan/util/: __init__.py  composites.py  dataset.py  dropout.py  fileutil.py  imaging.py  logging.py  module.py  registry.py
results/: all_histogram_AF751.pgf  all_histogram_Cy3.pgf  all_histogram_Cy5.pgf  all_histogram_FITC.pgf  all_histogram_H3342.pgf  dataset_stats_all.csv  dataset_stats_test.csv  dataset_stats_train.csv
