[tool.poetry]
name = "hoechstgan"
version = "0.1.0"
description = ""
authors = ["Georg Wölflein <georgw7777@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.22.3"
matplotlib = "^3.5.1"
scipy = "^1.8.0"
hydra-core = "^1.1.2"
loguru = "^0.6.0"
torch = "^1.11.0"
torchvision = "^0.12.0"
scikit-learn = "^1.0.2"
scikit-image = "^0.19.2"
wandb = "^0.12.17"
tqdm = "^4.64.0"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
ipykernel = "^6.13.0"
pylibCZIrw = "^3.3.0"
seaborn = "^0.12.2"
tueplots = "^0.0.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
